--- a/bugtracker_app/templates/login.html
+++ b/bugtracker_app/templates/login.html
@@ -1,10 +1,30 @@
-{% block title %}Login{% endblock %}
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<h1><a href="/">HOME</a></h1>
+<h1><a href="{% url 'login' %}">LOGOUT</a></h1>
+<title> Bug Zapper System </title>
+<div align="center">
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Login</button>
-</form>
+
+    <div class="container">
+        <h1>Login</h1>
+        <form action="" method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button value="submit">Login</button>
+        <p><a href="{% url 'signup' %}">Don't have an account?</a></p>
+        </form>
+    </div>
 {% endblock %}
+<div>
+</body>
+</html>
+
+
+
+
